Added determined label-based sorting in Marmox resource list view. Improved URF and Guise processing and displaying of numbers and dates.